Sun Mar 20 14:48:25 1994  Gray Watson  (gray@fridge.antaire.com)

	* Added better mechanisms for const definition.

Sun Mar 20 11:57:34 1994  Gray Watson  (gray at toaster.antaire.com)

	* Renamed token 'log-perror' and 'print-perror' to '...-error'.

Wed Mar  2 22:49:18 1994  Gray Watson  (gray at toaster.antaire.com)

	* Fixed some spelling and other misc problems.

Sun Feb 27 17:53:35 1994  Gray Watson  (gray@fridge.antaire.com)

	* New argv files.  Fixed Makefile.all.in problem.

	* Released version 2.0.1.

Sun Feb 20 00:39:37 1994  Gray Watson  (gray at toaster.antaire.com)

	* Cleaned up a number of configure/compat functions.

Fri Feb 18 02:32:53 1994  Gray Watson  (gray@fridge.antaire.com)

	* Fixed tons of __STDC__ defines.  Finally I hope.

	* Added more commands to malloc_t to log information, etc.

	* Released version 2.0.0.

	* Last minute fixes from Sparc and MIPS boxes.

Thu Feb 17 17:47:05 1994  Gray Watson  (gray@fridge.antaire.com)

	* Lots of changes to add argv files in place of argv subdir.

	* added initial support for external block locating.  this is
	going to be a toughy to solve.  there is a catch-22 here.

Sat Jan 22 01:34:55 1994  Gray Watson  (gray@fridge.antaire.com)

	* moved BLOCK_SIZE into malloc_log because its used everywhere.

Fri Jan 21 23:45:26 1994  Gray Watson  (gray@fridge.antaire.com)

	* added missing checks for ADMIN_FREE in heap_check

Wed Jan 19 20:43:05 1994  Gray Watson  (gray at toaster.antaire.com)

	* Added a new texinfo.tex macro file.

	* Renamed CHECK_FREE to CHECK_BLANK internally.

	* Added 'allow-nonlinear' token to remove special checks.

Mon Dec 20 14:14:08 1993  Gray Watson  (gray@fridge.antaire.com)

	* Added a -m max-amount flag to malloc_t.

	* Renamed dbg_tokens.h -> debug_tok.h and dbg_values.h -> debug_val.h

Mon Dec 20 02:24:02 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added -V option to malloc_dbg and desc field for debug-token list.
