@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the Malloc library.
-# $Id: Makefile.all.in,v 1.39 1994/03/20 19:49:05 gray Exp $
+# $Id: Makefile.all.in,v 1.40 1994/03/25 06:20:07 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -133,10 +133,10 @@ heavy : $(TEST) light
 #
 # auto configure settings
 #
-Makefile : Makefile.in config.status
+Makefile : Makefile.in
 	$(SHELL) config.status
 
-conf.h : conf.h.in config.status
+conf.h : conf.h.in
 	$(SHELL) config.status
 
 config.status : configure
