@@ -1,9 +1,10 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.21 1994/03/20 19:49:09 gray Exp $
+$Id: NEWS,v 1.22 1994/03/25 06:20:14 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 2.0.2:
 
+	* Added xmalloc,xrealloc,etc. override functions.
 	* Added better mechanisms for const definition.
 	* Lots of install, notes, misc. changes from net feedback.
 	* Renamed token 'log-perror' and 'print-perror' to '...-error'.
